# Segment-Signals

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build-and-publish.yaml  build-windows-wheel.yaml
src/: Read Me.txt  Segment Signal.sln
src/C DLL/: C DLL.vcxproj  DLLExport.h
src/C Sharp Unit Tests/: C Sharp Unit Tests.csproj  SegmentSignalUnitTest.cs  postbuild.bat
src/C Sharp Wrapper/: C Sharp DLL Wrapper.csproj  SegmentSignal.cs  SegmentationResults.cs
src/CPP DLL/: CPP DLL.vcxproj
src/CPP Static Library/: CPP Static Library.vcxproj  NoiseVarianceEstimateMethod.h  SegmentSignal.cpp  SegmentSignal.h  SegmentSignalFunctions.cpp  SegmentSignalFunctions.h  SegmentationResults.cpp  SegmentationResults.h
src/CPP Unit Tests/: CPP Unit Tests.vcxproj  InputDataEnum.h  SegmentSignalFunctionsUnitTest.cpp  SegmentSignalUnitTest.cpp
src/Matlab Extension/: OctaveCompile.m  SegmentSignal.m  SegmentSignalMex.cpp  SegmentSignalUnitTests.m  compile.m
src/Python Extension/: Python Extension.vcxproj  Python Extension.vcxproj.filters  Read Me.txt  SegmentationResultsPy.cpp  SegmentationResultsPy.h  module.cpp  setup.py
src/Python Interface/: NoiseVarianceEstimateMethod.py  SegmentSignal.py
src/Python Unit Tests/: testSegmentSignal.py
src/Test Data/: Large Data Set 2.txt
