[project]
name = "SegmentSignalPy"
version = "0.1.1"
description = "Signal segmentation algorithm by S. Radhakrishnan, et al. This is a Python interface for the C++ algorithm."

[project.urls]
homepage = "https://github.com/lendres/Segment-Signals"

[build-system]
requires = [
    "setuptools",
    "pybind11"
]
build-backend = "setuptools.build_meta"
